[workspace]
members = [
    ".",
    "backends/wasmi-runtime-layer",
    "backends/wasmtime-runtime-layer",
    "backends/webassembly-runtime-layer",
]

[package]
name = "wasm_runtime_layer"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_runtime_layer"
readme = "README.md"
description = """
Compatibility interface for WASM runtimes.
"""

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
fxhash = { version = "0.2", default-features = false }
ref-cast = { version = "1.0", default-features = false }
smallvec = { version = "1.11", default-features = false }

tracing = { version = "0.1", optional = true }

[dev-dependencies]
wat = "1.0"
wasm-bindgen-test = "0.3"
wasmi-runtime-layer = { version = "0.31", path = "backends/wasmi-runtime-layer" }
webassembly-runtime-layer = { version = "0.3.0", path = "backends/webassembly-runtime-layer" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wasmtime-runtime-layer = { version = "18.0", path = "backends/wasmtime-runtime-layer" }

[package.metadata."docs.rs"]
all-features = true
