[workspace]
members = [
    ".",
    "backends/wasmi_runtime_layer",
    "backends/wasmtime_runtime_layer",
    "backends/js_wasm_runtime_layer",
]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
fxhash = { version = "0.2", default-features = false }
ref-cast = { version = "1.0", default-features = false }
smallvec = { version = "1.11", default-features = false }
wasm_runtime_layer = { path = ".", version = "0.4.2" }

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_runtime_layer"

[package]
name = "wasm_runtime_layer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = """
Compatibility interface for WASM runtimes.
"""

[dependencies]
anyhow.workspace = true
fxhash.workspace = true
ref-cast.workspace = true
smallvec.workspace = true

[dev-dependencies]
js_wasm_runtime_layer = { version = "0.4.0", path = "backends/js_wasm_runtime_layer" }
wasmi_runtime_layer = { version = "0.36", path = "backends/wasmi_runtime_layer" }
wasm-bindgen-test = "0.3"
wat = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
wasmtime_runtime_layer = { version = "24.0", path = "backends/wasmtime_runtime_layer" }

[package.metadata."docs.rs"]
all-features = true
