[workspace]
members = [
    ".",
    "backends/wasmer_runtime_layer",
    "backends/wasmi_runtime_layer",
    "backends/wasmtime_runtime_layer",
    "backends/js_wasm_runtime_layer",
]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
fxhash = { version = "0.2", default-features = false }
hashbrown = { version = "0.16", default-features = false }
ref-cast = { version = "1.0", default-features = false }
smallvec = { version = "1.11", default-features = false }
wasm_runtime_layer = { path = ".", version = "0.6", default-features = false }

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_runtime_layer"

[package]
name = "wasm_runtime_layer"
version = "0.6.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = """
Compatibility interface for WASM runtimes.
"""

[dependencies]
anyhow = { workspace = true }
fxhash = { workspace = true }
hashbrown = { workspace = true }
ref-cast = { workspace = true }
smallvec = { workspace = true }

[features]
default = [ "std" ]
std = [ "anyhow/std" ]

[dev-dependencies]
js_wasm_runtime_layer = { version = "0.6", path = "backends/js_wasm_runtime_layer" }
wasmi_runtime_layer = { version = "0.50", path = "backends/wasmi_runtime_layer" }
wasm-bindgen-test = { version = "0.3" }
wat = { version = "1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
# wasmer_runtime_layer = { version = "6.0", path = "backends/wasmer_runtime_layer" }
wasmtime = { version = "35.0", default-features = false, features = [ "gc-null" ] }
wasmtime_runtime_layer = { version = "35.0", path = "backends/wasmtime_runtime_layer" }

[package.metadata."docs.rs"]
all-features = true
