[package]
name = "js_wasm_runtime_layer"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_runtime_layer"
readme = "README.md"
description = """
WebAssembly runtime compatibility interface implementation for your web browser's WebAssembly runtime.
"""

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
fxhash = { version = "0.2.1", default-features = false }
js-sys = { version = "0.3" }
slab = { version = "0.4" }
smallvec = { version = "1.11", default-features = false }
tracing = { version = "0.1", optional = true }
wasmparser = { version = "0.118", default-features = false }
wasm-bindgen = { version = "0.2" }
wasm_runtime_layer = { path = "../..", version = "0.4", default-features = false }

[features]
tracing = ["dep:tracing"]
