[package]
name = "wasmer_runtime_layer"
version = "5.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = """
WebAssembly runtime compatibility interface implementation for Wasmer.
"""

[dependencies]
anyhow = { workspace = true, features = ["std"] }
fxhash = { workspace = true }
ref-cast = { workspace = true }
smallvec = { workspace = true }
wasm_runtime_layer = { workspace = true, features = ["std"] }
wasmer = { version = "5.0" }
