[package]
name = "wasmi-runtime-layer"
version = "0.31.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_runtime_layer"
readme = "README.md"
description = """
WebAssembly runtime compatibility interface implementation for Wasmi.
"""

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
smallvec = { version = "1.11", default-features = false }
wasm_runtime_layer = { path = "../..", version = "0.3", default-features = false }
wasmi = { version = "0.31.0", default-features = false, features = [ "std" ] }
