[package]
name = "wasmi_runtime_layer"
version = "0.39.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = """
WebAssembly runtime compatibility interface implementation for Wasmi.
"""

[dependencies]
anyhow.workspace = true
ref-cast.workspace = true
smallvec.workspace = true
wasm_runtime_layer.workspace = true
wasmi = { version = "0.39", default-features = false, features = [ "std" ] }
