[package]
name = "wasmtime-runtime-layer"
version = "18.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DouglasDwyer/wasm_runtime_layer"
readme = "README.md"
description = """
WebAssembly runtime compatibility interface implementation for Wasmtime.
"""

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
fxhash = { version = "0.2", default-features = false }
smallvec = { version = "1.11", default-features = false }
wasm_runtime_layer = { path = "../..", version = "0.3", default-features = false }
wasmtime = { version = "18.0.0", default-features = false, features = [ "runtime", "cranelift" ] }
