[package]
name = "wasmtime_runtime_layer"
version = "27.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = """
WebAssembly runtime compatibility interface implementation for Wasmtime.
"""

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
fxhash = { version = "0.2", default-features = false }
ref-cast = { version = "1.0", default-features = false }
smallvec = { version = "1.11", default-features = false }
wasm_runtime_layer = { path = "../..", version = "0.4.2", default-features = false }
wasmtime = { version = "27.0", default-features = false, features = [ "runtime", "gc" ] }

[features]
default = [ "cranelift" ]

cranelift = [ "wasmtime/cranelift" ]
winch = [ "wasmtime/winch" ]
