[package]
name = "wasmtime_runtime_layer"
version = "31.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "README.md"
description = """
WebAssembly runtime compatibility interface implementation for Wasmtime.
"""

[dependencies]
anyhow = { workspace = true }
fxhash = { workspace = true }
ref-cast = { workspace = true }
smallvec = { workspace = true }
wasm_runtime_layer = { workspace = true }
wasmtime = { version = "31.0", default-features = false, features = [ "runtime", "gc" ] }

[features]
default = [ "cranelift", "std" ]
std = [ "anyhow/std", "wasmtime/std", "wasm_runtime_layer/std" ]

cranelift = [ "wasmtime/cranelift" ]
winch = [ "wasmtime/winch" ]
